Setting up the 76 numbers

--- a/bingo-challenge.html
+++ b/bingo-challenge.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="stylesheet.css">
         <title>Bingo Challenge | Lets play bingo amigos</title>
     </head>
     <body>
 
-        
+        <h1>Welcome to Rasmus PARTY BINGO🎉🎉</h1>
+        <div class="bingo-frame">
+            <!-- We use js here to addthe 76 divs  -->
+        </div>
 
-
-
+        <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
