The button is working
- generating a randum number and highlighting it

--- a/bingo-challenge.html
+++ b/bingo-challenge.html
@@ -7,6 +7,9 @@
     <body>
 
         <h1>Welcome to Rasmus PARTY BINGO🎉🎉</h1>
+        <div class="button-top">
+        <button onclick="buttonClickRandomNumberGenerator()">Press this button and see what happens</button>
+        </div>
         <div class="bingo-frame">
             <!-- We use js here to addthe 76 divs  -->
         </div>
