--- a/bingo-challenge.html
+++ b/bingo-challenge.html
@@ -13,6 +13,10 @@
         <div class="bingo-frame">
             <!-- We use js here to addthe 76 divs  -->
         </div>
+        <h2>User Board</h2>
+        <div class="userboard-frame">
+            <!-- We use js here to addthe 24 divs to the user board  -->
+        </div>
 
         <script type="text/javascript" src="script.js"></script>
     </body>
