Update with input field

--- a/bingo-challenge.html
+++ b/bingo-challenge.html
@@ -10,6 +10,15 @@
         <div class="button-top">
         <button onclick="buttonClickRandomNumberGenerator();buttonclickOnBoardgenerator()">Press this button and see what happens</button>
         </div>
+        <div class="input-section">
+            <h2>How many userboards would you like to play with (max 5)</h2>
+            <input type="text" id="input-field" name="input-field" placeholder="Add a number"></br>
+        </br>
+            <button type="submit" name="Submit" onclick="generateTheAmountOfUserBoards()">Generate this amount of userboards</button>
+        </div>
+
+
+
         <div class="bingo-frame">
             <!-- We use js here to addthe 76 divs  -->
         </div>
